added restaurant get routes
